# GeorgeRustTemplate

./: .gitignore  AGENTS.md  ARCHITECTURE_V2.md  BuildConfig.toml  Cargo.toml  INIT_CHECKLIST.md  README.md  WORKSPACE.md  build.rs  justfile
.github/workflows/: ci.yml  release-dashboard.yml  release-demo.yml
base/error/: Cargo.toml  README.md
base/error/src/: code.rs  context.rs  descriptor.rs  error.rs  kind.rs  lib.rs  native.rs  result.rs  tests.rs
base/error/src/catalog/: common.rs  config.rs  data.rs  mod.rs  network.rs  platform.rs  runtime.rs  security.rs  storage.rs
base/log/: Cargo.toml  README.md
base/log/src/: ext.rs  field.rs  level.rs  lib.rs  logger.rs  noop.rs  record.rs
base/log/src/logging/: cleanup.rs  error.rs  file.rs  init.rs  mod.rs
base/types/: Cargo.toml  README.md
base/types/src/: error.rs  id.rs  lib.rs  text.rs
base/utils/: Cargo.toml
base/utils/src/: lib.rs
baselib/: Cargo.toml
baselib/src/: ip.rs  lib.rs
baselib/src/logging/: cleanup.rs  config.rs  file.rs  init.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
corelib/: Cargo.toml
corelib/src/: lib.rs  ntp.rs  utils.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  ntp.rs
crates/core/src/ntp/: error.rs  mod.rs  parser.rs  port.rs  service.rs
crates/model/: Cargo.toml  README.md
crates/model/src/: lib.rs  ntp.rs
crates/model/src/common/: mod.rs
crates/model/src/ntp/: mod.rs  request.rs  response.rs
crates/platform-std/: Cargo.toml  README.md
crates/platform-std/src/: lib.rs
crates/platform-std/src/logging/: adapter.rs  cleanup.rs  config.rs  error.rs  file.rs  init.rs  mod.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: builder.rs  context.rs  lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
dashboard/: Cargo.toml  README.md  build.rs
dashboard/.github/workflows/: release.yml
dashboard/assets/i18n/: en.toml  zh-CN.toml
dashboard/assets/logo/: icon.rc
dashboard/assets/slint/: app.slint  theme.slint
dashboard/assets/slint/components/: common.slint  sidebar.slint
dashboard/assets/slint/views/: examples_view.slint  main_view.slint  ntp_view.slint  rust_examples_view.slint  settings_view.slint
dashboard/src/: main.rs
dashboard/src/app/: constants.rs  theme.rs
dashboard/src/config/: migration.rs  mod.rs  models.rs
dashboard/src/i18n/: mod.rs
dashboard/src/ui/handlers/: common.rs  examples.rs  mod.rs  settings.rs  window.rs
dashboard/src/ui/slint/: app.slint  theme.slint
dashboard/src/ui/slint/components/: common.slint  dialogs.slint  form_widgets.slint  title_bar.slint
dashboard/src/update/: checker.rs  constants.rs  expiry.rs  mod.rs  startup.rs  ui.rs
dashboard/src/utils/: logging.rs  mod.rs  time.rs
demo/: Cargo.toml  README.md  build.rs
demo/assets/i18n/: en.toml  zh-CN.toml
demo/assets/logo/: icon.rc
demo/assets/slint/: app.slint
demo/assets/slint/components/: sidebar.slint
demo/assets/slint/views/: main_view.slint
demo/packaging/linux/: generate-rpm-cross.toml
demo/src/: callback.rs  client.rs  demo.rs  lib.rs  main.rs  ui.rs
demo/src/app/: mod.rs  state.rs  window.rs
demo/src/config/: mod.rs
demo/src/i18n/: mod.rs
demo/src/protos/: login.rs  mod.rs  multi2.rs  ping.rs  test.rs
demo/src/ptt/connection/: transport.rs
demo/src/ui/: ntp.rs  view.rs
demo/src/ui/handlers/: mod.rs  ntp.rs  rust_examples.rs  settings.rs  window.rs
demo/src/utils/: logging.rs  mod.rs  time.rs
demo/ware/slint/: demo.slint  main.slint  ntp.slint
docs/1-design/: ARCHITECTURE_v3.md
examples/rust-demo/: Cargo.toml  README.md  build.rs
examples/rust-demo/assets/i18n/: en.toml  zh-CN.toml
examples/rust-demo/assets/slint/: app.slint  theme.slint
examples/rust-demo/assets/slint/components/: modal_manager.slint  sidebar.slint  title_bar.slint
examples/rust-demo/assets/slint/views/: rust_examples_view.slint
examples/rust-demo/packaging/linux/: demo.desktop  generate-rpm-cross.toml
examples/rust-demo/src/: main.rs
examples/rust-demo/src/app/: constants.rs  state.rs  theme.rs
examples/rust-demo/src/config/: migration.rs  models.rs
examples/rust-demo/src/ui/handlers/: mod.rs  ntp.rs  rust_examples.rs  settings.rs  window.rs
examples/rust-demo/src/update/: checker.rs  constants.rs
executable/: Cargo.toml
shared/: Cargo.toml  build.rs  uniffi.toml
shared/src/: android.rs  harmony.rs  lib.rs  shared.udl
src/: main.rs
src/protos/: multi1.rs
src/ui/: view.rs
ui/: demo.slint  main.slint
ui/static/logo/: macOS.icns
unleash/: build_demo_all.sh  build_executable_all.sh  build_shared_android_kotlin.sh  build_shared_android_so.sh
xtask/: Cargo.toml
xtask/src/: main.rs
