[workspace]
members = [
    "corelib",
    "demo",
    "executable",
    "shared",
    "dashboard"
]

resolver = "3"


# 公共依赖
[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
slint = "1.12.1"
uniffi = "0.30.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
