[workspace]
members = [
    "base/error",
    "base/log",
    "base/types",
    "base/utils",
    "crates/model",
    "crates/core",
    "crates/runtime",
    "crates/sdk",
    "examples/rust-demo",
    "xtask",
]

resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0"
rust-version = "1.85"


[workspace.dependencies]
chrono = { version = "0.4.42", default-features = true }
clap = { version = "4.5.51", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
slint = "=1.15.1"
slint-build = "=1.15.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
