[package]
name = "demo"
version = "0.1.0"
edition = "2024"


[dependencies]
corelib = { path = "../corelib" }
slint = { workspace = true }
chrono = "0.4.42"
# tokio = { workspace = true }
protobuf = "3.7.2"
# hex = "0.4.3"
# bytes = "1.10.1"
# thiserror = "2.0.17"

[build-dependencies]
slint-build = { workspace = true } # UI框架
winresource = "0.1.23" # 给 exe 添加图标

# macOS 打包
[package.metadata.bundle]
identifier = "com.georgebindragon.rust.template"
icon = ["demo/ware/logo/macOS.icns"] # 路径是相对工程根目录的
osx_url_schemes = ["com.georgebindragon.rust.template"]
