[package]
name = "demo"
version = "0.0.2"
edition = "2024"
description = "demo shell."
repository = " "
license = "GPL-3.0"

[package.metadata]
expire = 0

[[bin]]
name = "demo"
path = "src/main.rs"

[features]
default = ["update-check", "expiry-check"]
update-check = []
expiry-check = []

[dependencies]
corelib = { path = "../corelib" }
slint = { version = "=1.15.1", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "renderer-software", "accessibility", "compat-1-2", "unstable-winit-030"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
rfd = "0.14"
open = "5.3.3"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls", "gzip"] }
semver = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
dirs = "5.0"
sys-locale = "0.3"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
rust-embed = "8.5"
once_cell = "1.19"

[target.'cfg(target_os = "linux")'.dependencies]
fontique = { version = "=0.7.0", features = ["fontconfig-dlopen"] }

[build-dependencies]
slint-build = { workspace = true }
embed-resource = "2.5"
image = "0.25"
toml = "0.9.10"

[package.metadata.bundle]
name = "Desktop Demo Shell"
identifier = "com.georgebindragon.demo"
short_description = "A lightweight native desktop shell built with Rust and Slint."
long_description = "A lightweight native desktop shell used to host future product prototypes and built-in examples."
copyright = "2026 Desktop Demo Shell. All rights reserved."
category = "Developer Tool"
icon = ["demo/assets/logo/logo.icns"]
osx_url_schemes = ["com.georgebindragon.demo"]

[package.metadata.generate-rpm]
summary = "A lightweight native desktop shell built with Rust and Slint."
release = "1"

[[package.metadata.generate-rpm.assets]]
source = "target/release/demo"
dest = "/usr/bin/demo"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "demo/packaging/linux/demo.desktop"
dest = "/usr/share/applications/demo.desktop"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "demo/assets/logo/logo.png"
dest = "/usr/share/icons/hicolor/256x256/apps/demo.png"
mode = "0644"
